--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,20 @@ dependencies:
   flutter_svg: ^2.1.1
   provider: ^6.0.5
   audioplayers: ^6.5.1
+  fl_chart: ^1.1.1
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: "^0.14.4"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
 
 flutter:
   uses-material-design: true
