Redef-v1 version 1. Added Project features under Pomodoro 2. Revamp of pomodoro Screen and Habit screen 3. Fixed the Logical Bugs

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,6 @@ app.*.map.json
 /android/app/release
 # Flutter environment files
 .env
-key.properties
+android/key.properties
 app/upload-keystore.jks
 
